--- a/package.json
+++ b/package.json
@@ -1,15 +1,38 @@
 {
-  "name": "my-project",
+  "name": "app",
   "version": "1.0.0",
   "main": "electron/main.cjs",
   "scripts": {
     "start": "concurrently \"npm run start-backend\" \"npm run start-frontend\" \"npm run start-electron\"",
     "start-backend": "cd backend && uvicorn main:app --reload --host localhost --port 8000",
     "start-frontend": "cd frontend && npm run dev",
-    "start-electron": "electron ."
+    "start-electron": "electron .",
+    "build": "electron-builder"
   },
   "devDependencies": {
+    "concurrently": "^7.0.0",
     "electron": "^15.3.0",
-    "concurrently": "^7.0.0"
+    "electron-builder": "^24.13.3"
+  },
+  "build": {
+    "appId": "desktop.app",
+    "productName": "DLP",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "dist/**/*",
+      "electron/**/*",
+      "backend/**/*",
+      "electron/start_server.js"
+    ],
+    "win": {
+      "target": [
+        "nsis"
+      ]
+    }
+  },
+  "dependencies": {
+    "python-shell": "^5.0.0"
   }
 }
